--- a/package.json
+++ b/package.json
@@ -6,7 +6,15 @@
   "dependencies": {
     "@prisma/client": "^5.16.1",
     "@types/node": "^20.14.10",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "express-validator": "^7.1.0",
     "prisma": "^5.16.1",
     "typescript": "^5.5.3"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21"
   }
 }
