--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "prisma generate && tsc",
     "prisma:generate": "prisma generate",
-    "dev": "nodemon src/app.ts",
+    "dev": "nodemon app.ts",
     "start": "node dist/app.js"
   },
   "dependencies": {
