--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "builds": [
     {
-      "src": "api/**/*.ts",
+      "src": "dist/index.js",
       "use": "@vercel/node",
       "config": {
         "zeroConfig": true
@@ -12,7 +12,10 @@
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/api/$1"
+      "dest": "/dist/index.js"
     }
-  ]
+  ],
+  "env": {
+    "DATABASE_URL": "@DATABASE_URL"
+  }
 }
