--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "nodemon": "^3.1.4",
     "prisma": "^5.16.1",
     "randomstring": "^1.3.0",
-    "typescript": "^5.5.3"
+    "typescript": "^5.5.3",
+    "vercel": "^36.0.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
