--- a/package.json
+++ b/package.json
@@ -4,11 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "build": "tsc",
-    "prisma:generate": "prisma generate",
-    "postinstall": "npm run prisma:generate",
-    "dev": "nodemon app.ts",
-    "start": "node dist/app.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "@prisma/client": "^5.16.1",
