--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "prisma:generate": "prisma generate",
+    "postinstall": "npm run prisma:generate",
+    "dev": "nodemon app.ts",
+    "start": "node dist/app.js"
   },
   "dependencies": {
     "@prisma/client": "^5.16.1",
