--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true
-  },
-  "include": ["*.ts"],
-  "exclude": ["node_modules"]
+  }
+  //"include": ["*.ts"],
+  //"exclude": ["node_modules"]
 }
