--- a/vercel.json
+++ b/vercel.json
@@ -2,13 +2,14 @@
   "version": 2,
   "builds": [
     {
+      "src": "app.ts",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/api"
+      "dest": "app.ts"
     }
   ]
 }
