--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,11 +3,10 @@
     "target": "ES2020",
     "module": "commonjs",
     "outDir": "./dist",
-    "rootDir": "./",
+    // "rootDir": "./",
+    "forceConsistentCasingInFileNames": true,
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true
-  },
-  "include": ["*.ts"],
-  "exclude": ["node_modules"]
+  }
 }
